--- a/hw/misc/Makefile.objs
+++ b/hw/misc/Makefile.objs
@@ -70,5 +70,7 @@ obj-$(CONFIG_PVPANIC) += pvpanic.o
 obj-$(CONFIG_HYPERV_TESTDEV) += hyperv_testdev.o
 obj-$(CONFIG_AUX) += auxbus.o
 obj-$(CONFIG_ASPEED_SOC) += aspeed_scu.o aspeed_sdmc.o aspeed_ibt.o aspeed_pwm.o
+obj-$(CONFIG_ASPEED_SOC) += aspeed_lpc.o
+
 obj-y += mmio_interface.o
 obj-$(CONFIG_MSF2) += msf2-sysreg.o
